@@ -380,6 +380,7 @@ TESTS_ipython = \
 TESTS_python = \
   python/298.py \
   python/341.py \
+  python/471.py \
   python/_altscc.ipynb \
   python/_autparserr.ipynb \
   python/_aux.ipynb \
